--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "axios": "^1.12.2",
+    "buffer": "^6.0.3",
     "http-status": "^2.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
